--- a/sass/sass/_paginations.scss
+++ b/sass/sass/_paginations.scss
@@ -128,6 +128,7 @@
             display: inline-block;
             vertical-align: middle;
             box-shadow: none;
+            text-shadow:none;
             &:hover, &:focus {
                 color: #fff !important;
                 background: $form-focus;
